added all the  swagger docs
